# smart-agent

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  ContextManager.cpp  ContextManager.h  Logger.cpp  Logger.h  OpenGLRenderer.cpp  OpenGLRenderer.h  main.cpp
gui/: OpenGLRenderer.cpp
llm-interface/: ModelConstants.h  ModelInterface.cpp  ModelInterface.h  ModelManager.cpp  ModelManager.h
